--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js"crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="index.js"></script>
   </head>
   <body>
@@ -18,25 +21,25 @@
             <li><a href="#" class="nav__link">Contact</a></li>
             <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
           </ul>
-        </div>
-        <button class="btn__menu">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="menu__backdrop">
-          <button class="btn__menu btn__menu--close">
-            <i class="fas fa-times"></i>
+          <button class="btn__menu" onclick="openMenu()">
+            <i class="fas fa-bars"></i>
           </button>
-          <ul class="menu__links">
-            <li class="menu__list">
-              <a href="#" class="menu__link">Home</a>
-            </li>
-            <li class="menu__list">
-              <a href="#features" class="menu__link">Books</a>
-            </li>
-            <li class="menu__list">
-              <a class="menu__link no-cursor">Contact</a>
-            </li>
-          </ul>
+          <div class="menu__backdrop">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+              <i class="fas fa-times"></i>
+            </button>
+            <ul class="menu__links">
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
+              </li>
+              <li class="menu__list">
+                <a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
+              </li>
+              <li class="menu__list">
+                <a class="menu__link no-cursor" onclick="closeMenu()">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
       <header>
@@ -327,7 +330,7 @@
         <div class="row row__column">
           <a href="">
             <figure class="footer__logo--img">
-              <img src="./assets/Library.svg" alt="">
+              <img src="./assets/Library.svg" alt="" />
             </figure>
           </a>
           <div class="footer__list">
